force-app/main/default/objects/NBA_Cadence_Step__mdt/NBA_Cadence_Step__mdt.object-meta.xml
<CustomObject>
    <description>Individual step in a GTM cadence. Each step is a full actionable item (Call, SMS, Email) with outcome-based branching. Child of NBA_Cadence__mdt via Cadence_Name__c text FK.</description>
    <label>GTM Cadence Step</label>
    <pluralLabel>GTM Cadence Steps</pluralLabel>
</CustomObject>