force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Name__c</fullName>
    <description>Foreign key to NBA_Cadence__mdt.DeveloperName. Groups steps under a cadence.</description>
    <label>Cadence Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>