force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_Number__c</fullName>
    <description>Which cadence day this step executes on (0, 1, 3, 5, etc.).</description>
    <label>Day Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>