force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of this step for admin reference.</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>