force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>Execution_Type__c</fullName>
    <label>Execution Type</label>
    <description>Whether this step is executed by a Human AE or Automated by the system</description>
    <length>20</length>
    <type>Text</type>
</CustomField>