force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Instruction_Text__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Text__c</fullName>
    <description>Human-readable instruction shown to the AE for this step. E.g., "Call the prospect. Leave voicemail if no answer."</description>
    <label>Instruction Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>