force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this step is active. Inactive steps are skipped by the engine.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>