force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <description>Maximum attempts for this step. Relevant for Call steps with retries. Default: 1.</description>
    <label>Max Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>