force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/On_Meeting_Action__c.field-meta.xml
<CustomField>
    <fullName>On_Meeting_Action__c</fullName>
    <description>What happens when a meeting is scheduled for this opportunity. Evaluated as a global exit condition.</description>
    <label>On Meeting Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End_Cadence</fullName>
                <default>true</default>
                <label>End Cadence</label>
            </value>
            <value>
                <fullName>Skip_To_Step</fullName>
                <label>Skip To Step</label>
            </value>
            <value>
                <fullName>Skip_To_Day</fullName>
                <label>Skip To Day</label>
            </value>
            <value>
                <fullName>Continue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>