force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/On_Meeting_Target__c.field-meta.xml
<CustomField>
    <fullName>On_Meeting_Target__c</fullName>
    <description>Target step number or day number when On_Meeting_Action is Skip_To_Step or Skip_To_Day.</description>
    <label>On Meeting Target</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>