force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/On_No_Answer_Action__c.field-meta.xml
<CustomField>
    <fullName>On_No_Answer_Action__c</fullName>
    <description>What happens when the prospect does not answer and no voicemail is left. Only applies to Call steps.</description>
    <label>On No Answer Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End_Cadence</fullName>
                <label>End Cadence</label>
            </value>
            <value>
                <fullName>Skip_To_Step</fullName>
                <label>Skip To Step</label>
            </value>
            <value>
                <fullName>Skip_To_Day</fullName>
                <label>Skip To Day</label>
            </value>
            <value>
                <fullName>Continue</fullName>
                <default>true</default>
                <label>Continue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>