force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Spacing_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Spacing_Minutes__c</fullName>
    <description>Minimum minutes since last attempt before this step becomes available. E.g., 60 for 1-hour spacing between calls.</description>
    <label>Spacing Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>