force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <description>Opportunity stage this cadence step applies to</description>
    <length>80</length>
    <type>Text</type>
</CustomField>