force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <description>Global step number across the entire cadence (1, 2, 3...). Used for progress tracking and branching targets.</description>
    <label>Step Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>