force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Step_Order_In_Day__c.field-meta.xml
<CustomField>
    <fullName>Step_Order_In_Day__c</fullName>
    <description>Ordering within the same cadence day (1, 2, 3...). Used for sequencing multiple steps on the same day.</description>
    <label>Step Order In Day</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>