force-app/main/default/objects/NBA_Cadence_Step__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <description>Template identifier for automated sends (SMS/Email)</description>
    <length>255</length>
    <type>Text</type>
</CustomField>